# backend/openapi.json
@@ -4903,15 +4903,6 @@
             "format": "int32",
             "minimum": 0
           },
-          "overview_pdf": {
-            "$ref": "#/components/schemas/FileId"
-          },
-          "results_eml": {
-            "$ref": "#/components/schemas/FileId"
-          },
-          "results_pdf": {
-            "$ref": "#/components/schemas/FileId"
-          },
           "start_date_time": {
             "type": "string",
             "format": "date-time"
@@ -5944,11 +5935,6 @@
           }
         },
         "additionalProperties": false
-      },
-      "FileId": {
-        "type": "integer",
-        "format": "int32",
-        "minimum": 0
       },
       "GSBDifferencesCounts": {
         "type": "object",
